<resources>
    <string name="app_name">FlightApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstOnBoarding">Explore The Beautiful World!</string>
    <string name="secondOnBoarding">Find Your Perfect Tickets To Fly</string>
    <string name="thirdOnBoarding">Book Appointment in Easiest Way!</string>
    <string name="btnSkip">Skip</string>
    <string name="btnNext">Next</string>
    <string name="btnGetStarted">Get Started</string>
    <string name="txtSignIn">Sign In</string>
    <string name="txtSignIn_description">Start Your Journey with affordable price</string>
    <string name="txtEmail">Email</string>
    <string name="txtEnterEmail">Enter Your Email</string>
    <string name="txtPassword">Password</string>
    <string name="txtEnterPassword">Enter Your Password</string>
    <string name="btnSignIn">Sign in</string>
    <string name="txtOrSignIn">Or Sign In With</string>
    <string name="txtDontHave">Don’t Have an Account?</string>
    <string name="txtSingUp">Sign Up</string>
    <string name="txtFirstName">First Name</string>
    <string name="txtSecondName">Last Name</string>
    <string name="txtEnterFirstName">Enter your first name</string>
    <string name="txtEnterSecondName">Enter your last name</string>
    <string name="txtAlready">Already have an account?</string>
    <string name="txtOrSignUp">Or Sign Up With</string>
    <string name="btnSignUp">Sign up</string>
    <string name="txt_search">Search Flights</string>
    <string name="txt_header_home">Discover a new world</string>
    <string name="radio_one_way">One-way</string>
    <string name="radio_round_trip">Round-trip</string>
    <string name="txtFrom">From</string>
    <string name="txtTo">To</string>
    <string name="txtDepartureDate">Departure Date</string>
    <string name="txtTravelers">Travelers</string>
    <string name="btnSearchFlights">Search flights</string>
    <string name="default_web_client_id">1062956195834-f33vid6iho1m46513p1f4ftg9kgpjohm.apps.googleusercontent.com</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="order_confirmed_message">Thank you for your order. You will receive email confirmation shortly.</string>
    <string name="see_details">See Details</string>
    <string name="calendar_txt_select">Select Date</string>
    <string name="txtContactDetails">Contact Details</string>
    <string name="txtContactDescription">(For E-Ticket/Voucher)</string>
    <string name="txtEdit">Edit</string>
    <string name="txtPassengerInfo">Passenger Info</string>
    <string name="btnSaveChanges">Save Changes</string>
    <string name="txtFacility">Facility</string>
    <string name="txtContactBaggage">Baggage</string>
    <string name="txtAddExtra">Add extra baggage</string>
    <string name="txtExtraProtection">Extra Protection</string>
    <string name="txtContactOption">Same As Contact Details</string>
    <string name="txtSearchSubtotal">Subtotal</string>
    <string name="txtSelectSeat">Select Seat</string>
    <string name="radioMale">Male</string>
    <string name="radioFemale">Female</string>

    <string name="txtContactPersonDetails">Contact Person Details</string>
    <string name="txtFullName">Full Name</string>
    <string name="txtEmailAddress">Email Address</string>
    <string name="txtPhoneNumber">Phone Number</string>
    <string name="txtIdCardNumber">ID card number</string>
    <string name="txtFooterContactPersonDetails">This contact is for e-ticket and refund/rescheduling</string>
    <string name="txtFooterPersonInfo">This contact is for e-ticket and refund/rescheduling</string>
    <string name="txtAddBaggage">Add Baggage</string>
    <string name="txtZeroKg">0Kg</string>
    <string name="txtFiveKg">5Kg</string>
    <string name="txtTenKg">10Kg</string>
    <string name="txtTotal">Total</string>
    <string name="txtMyProfile">My Profile</string>
    <string name="txtSettings">Settings</string>
    <string name="txtLanguage">Language</string>
    <string name="txtGeneral">General</string>
    <string name="txtAccountSecurity">Account &amp; Security</string>
    <string name="txtEmailAndNumber">Email and Mobile Number</string>
    <string name="txtDeleteAccount">Delete Account</string>
    <string name="txtOther">Other</string>
    <string name="txtSure">You sure want to delete your account?</string>
    <string name="txtDeletionAccept">I understand and I accept the deletion of my account</string>
    <string name="txtTransaction">Transactions</string>
    <string name="txtGoSomewhere">Let’s go somewhere</string>
    <string name="txtTransactionDescription">After book a trip you can manage orders and see E-ticket here.</string>
    <string name="btnBook">Book a trip</string>
    <string name="txtReturnDate">Return Date</string>
    <string name="txtDigitalPayment">Digital payment method(s)</string>
    <string name="txtPaymentSubHeader">Swipe left to set your default method</string>
    <string name="calendar_btn_search">Search date</string>
    <string name="txtHidden">***</string>
    <string name="btnProceed">Proceed The Payment</string>
    <string name="txtSubtotal">Subtotal</string>
    <string name="txtTransactionDetails">Transaction Details</string>
    <string name="txtStatus">Status</string>
    <string name="txtInvoice">Invoice</string>
    <string name="txtTransactionDate">Transaction Date</string>
    <string name="txtPaymentMethod">Payment Method</string>
    <string name="txtSuccess">Success</string>
    <string name="txtFailed">Failed</string>
    <string name="txtPayPal">PayPal</string>
    <string name="txtCard">Credit Card</string>


    <string name="facebook_app_id">682266773993756</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">437bef2de635e963d27131849e4acb39</string>
    <string name="verifying_your_email">Verifying Your Email</string>
    <string name="no_flights_were_found">No flights were found</string>

</resources>