<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_blue"
    tools:context=".ui.fragments.payment.PaymentSuccessfulFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/paymentsuccessful"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/orderConfirmedtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:text="@string/order_confirmed"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/oderThankYoutv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:padding="8dp"
        android:text="@string/order_confirmed_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/orderConfirmedtv"
        app:layout_constraintStart_toStartOf="@+id/orderConfirmedtv"
        app:layout_constraintTop_toBottomOf="@+id/orderConfirmedtv" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSeeDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_skip"
        android:paddingHorizontal="24dp"
        android:text="@string/see_details"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/oderThankYoutv"
        app:layout_constraintStart_toStartOf="@+id/oderThankYoutv"
        app:layout_constraintTop_toBottomOf="@+id/oderThankYoutv" />


</androidx.constraintlayout.widget.ConstraintLayout>